Js part of createProj page Signed-off-by: AnthStep <lightlife25@gmail.com>

--- a/frontend/components/createProject/createProject-pug.component.pug
+++ b/frontend/components/createProject/createProject-pug.component.pug
@@ -8,24 +8,30 @@
 				.cellTitle
 					h2 Title:
 				.projTitle
-					input(type = "text")
+					input(type = "text", ng-model = "createProj.projectTitle")
 			.cell
 				.cellTitle
 					h2 Description:
 				.projDescription
-					textarea
+					textarea(ng-model = "createProj.projectDescription")
 			.cell
 				.cellTitle
 					h2 Participants:
 				.projParticipants
-					
+					select(ng-change = "createProj.participantUpdate()" ng-model = "createProj.userToAdd")
+						option(ng-repeat="user in createProj.users track by $index" value="{{user._id}}") {{user.email}}
+					.participantCell(ng-repeat='userid in createProj.participants track by $index')
+						.participant_wrapper
+							.participantTitle {{createProj.getUserNameById(userid)}}
+							.deleteButton(ng-click = "createProj.participantDelete(userid)")
+								i.fa.fa-times.fa-fw
 			.cell
 				.cellTitle
 					h2 Deadline: 
 				.projDeadline
-					.deadline_wrapper
-						input(type='text')
+					.deadline_wrapper(ng-click = "createProj.open()")
+						input(type="text", uib-datepicker-popup="{{format}}", ng-model="createProj.deadline", is-open='createProj.popup.opened', ng-required='true', close-text='Close', alt-input-formats='altInputFormats',placeholder="{{createProj.deadline}}")
 						i.fa.fa-calendar(aria-hidden='true')
 			.cell
 				.button
-					button.save Save
+					button.save(ng-click="createProj.save()") Save
