--- a/frontend/components/header/headerStyles.styl
+++ b/frontend/components/header/headerStyles.styl
@@ -84,6 +84,9 @@
                     i
                         padding 2%
                         text-align center
+                .createProj
+                    font-family "Montserrat"
+                    font-size 20px
                 .black
                     select
                         background-color #3498DB
