#69 - implement responsive set up check-in

--- a/frontend/components/checkins/checkinsStyles.styl
+++ b/frontend/components/checkins/checkinsStyles.styl
@@ -29,7 +29,7 @@
 
     /* ACCORDION */
     .checkins-accordion {
-        max-width: 690px;
+        max-width: 650px;
         margin: 0 auto;
         margin-top: 40px;
     }
@@ -43,7 +43,7 @@
         border: 1px solid #adadad;
         border-radius: 10px;
         background: #f5f5f5;
-        overflow: hidden; /*TODO: or set overflow:auto and height:450px*/
+        overflow: hidden;
         //height: 450px;
     }
 
@@ -111,7 +111,8 @@
         }
 
         .tabs {
-            display: block;
+            display: flex;
+            justify-content center;
             margin: 0;
             padding: 0;
         }
@@ -127,8 +128,8 @@
             border-radius: 10px;
             float: left;
             cursor: pointer;
-            //padding: 1%;
-            padding: .4em 0.2em;
+            padding: 1%;
+            //padding: .4em 0.2em;
         }
     }
 
