--- a/frontend/components/checkinsCreate/checkinsCreate-pug.component.pug
+++ b/frontend/components/checkinsCreate/checkinsCreate-pug.component.pug
@@ -1,61 +1,61 @@
-.checkin-create-wrapper
-    .checkin-title
-        ul.title
-            li
-                h1
-                    span Set up check-in
-    .container
-        .wrapper
-            header.header
-                .header-container
-                    h2 What question do you want to ask?
-                    a(ng-link='["Checkins"]')
-                        i.fa.fa-times.fa-2x
-                input.qq(type='text', placeholder='Type your question...')
-            article.main
-                ul.container-list
-                    h2 Who do you want to ask?
-                    li#all-list.list
-                        span Check All
-                        input.checkbox-btn(type='checkbox')
-                    li.list
-                        span Name Surname
-                        input.checkbox-btn(type='checkbox')
-                    li.list
-                        span Name Surname
-                        input.checkbox-btn(type='checkbox')
-                    li.list
-                        span Name Surname
-                        input.checkbox-btn(type='checkbox')
-                    li.list
-                        span Name Surname
-                        input.checkbox-btn(type='checkbox')
-                    li.list
-                        span Name Surname
-                        input.checkbox-btn(type='checkbox')
-                    li.list
-                        span Name Surname
-                        input.checkbox-btn(type='checkbox')
-                    li.list
-                        span Name Surname
-                        input.checkbox-btn(type='checkbox')
-                    li.list
-                        span Name Surname
-                        input.checkbox-btn(type='checkbox')
-                    li.list
-                        span Name Surname
-                        input.checkbox-btn(type='checkbox')
-                    li.list
-                        span Name Surname
-                        input.checkbox-btn(type='checkbox')
-            footer.footer
-                h2 How frequently should we ask it?
+.checkins-setup-wrapper
+    // HEADER
+    .checkins-header
+        ul
+            li.header-list
+                h1 Set up check-in
+            // <li class="header-list"><button>Set up check-in</button></li>
+    // MAIN
+    .setup-checkins
+        .header-setup
+            h3 What question do you want to ask?
+            input.question(type='text', placeholder='Type your question...')
+        .main-setup
+            ul.user-list
+                h3 Who do you want to ask?
+                li#all-list.list
+                    span Check All
+                    input.checkbox-btn(type='checkbox')
+                li.list
+                    span Name Surname
+                    input.checkbox-btn(type='checkbox')
+                li.list
+                    span Name Surname
+                    input.checkbox-btn(type='checkbox')
+                li.list
+                    span Name Surname
+                    input.checkbox-btn(type='checkbox')
+                li.list
+                    span Name Surname
+                    input.checkbox-btn(type='checkbox')
+                li.list
+                    span Name Surname
+                    input.checkbox-btn(type='checkbox')
+                li.list
+                    span Name Surname
+                    input.checkbox-btn(type='checkbox')
+                li.list
+                    span Name Surname
+                    input.checkbox-btn(type='checkbox')
+                li.list
+                    span Name Surname
+                    input.checkbox-btn(type='checkbox')
+                li.list
+                    span Name Surname
+                    input.checkbox-btn(type='checkbox')
+        .footer-setup
+            h3 How frequently should we ask it?
+            div
                 select
                     option(value='') Every weekday
-                    option(value='') Every Monaday
+                    option(value='') Every Monday
                     option(value='') Every Friday
+                    option(value='') Every other Monday
+                    option(value='') Every other Friday
                     option(value='') First Monday of every month
                 select
                     option(value='') at the beginning of the day
                     option(value='') at the end of the day
-                button(ng-click='["Checkins"]') Save
+            div
+                button(ng-link='["Checkins"]') Cancel
+                button Save
