--- a/frontend/components/checkins/checkins-pug.component.pug
+++ b/frontend/components/checkins/checkins-pug.component.pug
@@ -18,7 +18,7 @@
         input#sunday(type='radio', name='week')
         ul.tabs
             li
-                label(for='week-list') All QQ
+                label(for='week-list') All-QQ
             li
                 label(for='monday') Monday
             li
