--- a/frontend/components/reports/reports.template.pug
+++ b/frontend/components/reports/reports.template.pug
@@ -6,6 +6,10 @@
                 .col-xs-1.col-xs-offset-1.fa.fa-close.button
             hr
             .row.reports-tools
+                .col-xs-12
+                    .row
+                        .col-xs-4
+                    .row
             .row 
 //
 //    section.row.center-xs
