#76 implement responsive menu

--- a/frontend/components/root/rootStyles.styl
+++ b/frontend/components/root/rootStyles.styl
@@ -15,7 +15,7 @@
 
 @media only screen  and (max-width : 1000px), screen and (max-device-width : 1000px)
 	#root_container
-		padding-top 90px
+		padding-top 12%
 		margin auto
 
 @media only screen  and (max-width : 480px), screen and (max-device-width: 480px)
