--- a/frontend/components/menu/menuStyles.styl
+++ b/frontend/components/menu/menuStyles.styl
@@ -6,6 +6,8 @@
     left 0
     top 0px
     z-index 10
+    *
+        box-sizing border-box
     .burger
         margin-top 30px
         background-color #fbfbfb;
@@ -107,30 +109,23 @@
             li 
                 width auto
                 margin-left 5px
-                //- float left
+
 
             .nav-text
 
                 width  100%
-    .side-menu-wrapper 
-        //- .side-menu
     .show
         display block
-    //- .side-menu 
-    //-     display none
-    //-     li
-    //-         float left
 @media only screen  and (max-width : 720px), screen and (max-device-width : 720px)
     .side-menu-wrapper
         .side-menu
             .fa
                 display none
-            //- margin-top 90px
             li
                 a
                     font-size 2.5em
         .burger
-            height 8%
+            height 12%
             .fa
                 font-size: 2.1em;
 @media only screen  and (max-width : 480px), screen and (max-device-width: 480px)
