--- a/frontend/components/messageBoard/messageBoard.styl
+++ b/frontend/components/messageBoard/messageBoard.styl
@@ -7,7 +7,7 @@
     box-shadow 0 5px 20px 2px #808080
     border 1px solid #ADADAD
     border-radius 10px
-    .header
+    div.header
         font-size 1.6em
         margin-bottom 50px
         h2
