#69 - answers for check-ins

--- a/frontend/components/checkins/checkins-pug.component.pug
+++ b/frontend/components/checkins/checkins-pug.component.pug
@@ -39,7 +39,7 @@
                 ul.content
                     li.qq 09:30
                     li.qq
-                        a(href='') Do you have any ideas for a future show?
+                        a(ng-link='["CheckinsInfo"]') Do you have any ideas for a future show?
                     li.qq
                         div
                             label.switch
@@ -48,7 +48,7 @@
                 ul.content
                     li.qq 12:30
                     li.qq
-                        a(href='') What did you work on today?
+                        a(ng-link='["CheckinsInfo"]') What did you work on today?
                     li.qq
                         div
                             label.switch
@@ -57,7 +57,7 @@
                 ul.content
                     li.qq 12:30
                     li.qq
-                        a(href='') What are you working on?
+                        a(ng-link='["CheckinsInfo"]') What are you working on?
                     li.qq
                         div
                             label.switch
@@ -66,7 +66,7 @@
                 ul.content
                     li.qq 12:30
                     li.qq
-                        a(href='') See anything great lately that inspired you?
+                        a(ng-link='["CheckinsInfo"]') See anything great lately that inspired you?
                     li.qq
                         div
                             label.switch
@@ -75,7 +75,7 @@
                 ul.content
                     li.qq 12:30
                     li.qq
-                        a(href='') Are you blocked on anything?
+                        a(ng-link='["CheckinsInfo"]') Are you blocked on anything?
                     li.qq
                         div
                             label.switch
@@ -87,7 +87,7 @@
                 ul.content
                     li.qq 12:30
                     li.qq
-                        a(href='') What are you working on?
+                        a(ng-link='["CheckinsInfo"]') What are you working on?
                     li.qq
                         div
                             label.switch
@@ -104,7 +104,7 @@
                 ul.content
                     li.qq 12:30
                     li.qq
-                        a(href='') See anything great lately that inspired you?
+                        a(ng-link='["CheckinsInfo"]') See anything great lately that inspired you?
                     li.qq
                         div
                             label.switch
@@ -113,7 +113,7 @@
                 ul.content
                     li.qq 12:30
                     li.qq
-                        a(href='') Are you blocked on anything?
+                        a(ng-link='["CheckinsInfo"]') Are you blocked on anything?
                     li.qq
                         div
                             label.switch
