--- a/frontend/components/checkinsCreate/checkinsCreate-pug.component.pug
+++ b/frontend/components/checkinsCreate/checkinsCreate-pug.component.pug
@@ -1,15 +1,9 @@
 .checkins-setup-wrapper
-    // HEADER
-    .checkins-header
-        ul
-            li.header-list
-                h1 Set up check-in
-            // <li class="header-list"><button>Set up check-in</button></li>
-    // MAIN
-    .setup-checkins
+    .checkins-setup
         .header-setup
-            h3 What question do you want to ask?
-            input.question(type='text', placeholder='Type your question...')
+            div
+                h3 What question do you want to ask?
+                input.question(type='text', placeholder='Type your question...')
         .main-setup
             ul.user-list
                 h3 Who do you want to ask?
