--- a/frontend/components/checkinsCreate/checkinsCreateStyles.styl
+++ b/frontend/components/checkinsCreate/checkinsCreateStyles.styl
@@ -2,14 +2,7 @@
     margin 5%
     li
         list-style none
-    .checkins-header
-        display flex
-        justify-content center
-        flex-direction row
-    .header-list
-        h1
-            border-bottom 1px solid black
-    .setup-checkins
+    .checkins-setup
         display flex
         flex-flow row wrap
         justify-content center
@@ -25,18 +18,13 @@
     .header-setup, .main-setup, .list
         border-bottom 1px solid #adadad
     .header-setup
-        height 19%
-    .question
-        width 350px
-        font-size 23px
-        text-align center
-        font-weight bold
+        height 18%
     .main-setup
         height 60%
         overflow auto
     .user-list
         li
-            font-size 20px
+            font-size 25px
             padding 1%
     .list
         display flex
@@ -44,4 +32,4 @@
         justify-content space-between
         margin-right 50px
     .footer-setup
-        height 21%
+        height 22%
