--- a/frontend/components/events/eventEdit.component.styl
+++ b/frontend/components/events/eventEdit.component.styl
@@ -20,14 +20,57 @@
       display flex
       flex-direction row
       justify-content space-between
-      margin-bottom 5px
+      margin-top 10px
+      margin-bottom 10px
+      
+      .dataPicker
+        .form-control
+          width 60%
+        .picker
+          display flex
+          flex-direction row
+        a
+          height 34px
     textarea
       min-width 100%
       height 150px
     .participants
-      display flex
-      flex-direction row
-      margin-bottom 5px
+        width 100%
+        display block-flex
+        flex-wrap wrap
+        justify-content center
+        align-items center
+        select
+          max-width 80%
+          min-width 80%
+          border-radius 7px
+          border none
+          outline none
+          padding 8px
+          border 1px solid gray
+          color #333
+          &:hover
+            box-shadow: 0 0 7px #3498db
+        .participantCell
+          display flex
+          justify-content center
+          align-items center
+          margin-top 10px
+          .participant_wrapper
+            background-color #1d8dbf
+            display inline-flex
+            padding 10px
+            border-radius 8px
+            .participantTitle
+              color white
+              margin-right 10px
+            .deleteButton
+              i
+                font-size 25px
+                transition all 0.3s ease-out;
+                cursor pointer
+                &:hover
+                  color white
 
     .period
       display flex
