Beatify main view

--- a/frontend/components/reports/reportsMainStyle.css
+++ b/frontend/components/reports/reportsMainStyle.css
@@ -6,6 +6,7 @@
   margin: 0;
 }
 .reports-wrapper hr {
+  margin: 5;
   border-top: 1px solid #adadad;
 }
 .reports-wrapper * {
@@ -17,8 +18,8 @@
   padding: 0px;
 }
 .reports-wrapper .reports-holder {
-  padding-left: 1%;
-  padding-right: 1%;
+  padding-left: 2%;
+  padding-right: 2%;
   padding-bottom: 1%;
   border: 1px solid #adadad;
   border-radius: 10px;
@@ -26,6 +27,7 @@
   box-shadow: 0px 5px 20px 2px #808080;
 }
 .reports-wrapper .reports-header {
+  border-bottom: 1px solid #adadad;
   padding: 1%;
 }
 .reports-wrapper .reports-header h3 {
@@ -65,7 +67,7 @@
 }
 .reports-wrapper .reports-samples .item {
   display: inline-block;
-  background-color: #ededed;
+  background-color: #d8d8d8;
   margin: 1%;
   padding: 2%;
   width: 100%;
