--- a/frontend/components/reports/reports.template.pug
+++ b/frontend/components/reports/reports.template.pug
@@ -4,7 +4,6 @@
             .row.reports-header
                 h3.col-xs-10 Reports
                 .col-xs-1.col-xs-offset-1.fa.fa-close.button.font-button
-            hr
             .row.generate-holder.center-xs
                 h3.col-xs-6 Quckly report generating
                 .col-xs-12
@@ -44,7 +43,7 @@
                                     .col-xs-8.item-title Daily report
                                     .col-xs-4
                                         .row.around-xs
-                                            span.col-xs-5.fa.fa-cog.button.f-btn
+                                            span.col-xs-5.fa.fa-folder-open-o.button.f-btn
                                             span.col-xs-5.fa.fa-trash.button.f-btn
                                 hr
                                 .row.start-xs.item-row
@@ -57,7 +56,7 @@
                                     .col-xs-8.item-title Daily report
                                     .col-xs-4
                                         .row.around-xs
-                                            span.col-xs-5.fa.fa-cog.button.f-btn
+                                            span.col-xs-5.fa.fa-folder-open-o.button.f-btn
                                             span.col-xs-5.fa.fa-trash.button.f-btn
                                 hr
                                 .row.start-xs.item-row
@@ -75,7 +74,7 @@
                                     .col-xs-8.item-title Daily report
                                     .col-xs-4
                                         .row.around-xs
-                                            span.col-xs-5.fa.fa-cog.button.f-btn
+                                            span.col-xs-5.fa.fa-folder-open-o.button.f-btn
                                             span.col-xs-5.fa.fa-trash.button.f-btn
                                 hr
                                 .row.start-xs.item-row
