--- a/frontend/components/reports/reportsMainStyle.styl
+++ b/frontend/components/reports/reportsMainStyle.styl
@@ -5,6 +5,7 @@
     .row
         margin 0
     hr
+        margin 5
         border-top 1px solid border-grey
     *
         box-sizing border-box
@@ -12,14 +13,15 @@
     .row, [class^="col-"]
         padding 0px
     .reports-holder
-        padding-left  1%
-        padding-right   1%
+        padding-left  2%
+        padding-right   2%
         padding-bottom 1%
         border 1px solid border-grey
         border-radius 10px
         background-color background-white
         box-shadow 0px 5px 20px 2px  shadow-grey
     .reports-header
+        border-bottom  1px solid border-grey
         h3
             font-family "Montserrat"
             font-size 30px
@@ -53,10 +55,10 @@
             -webkit-column-gap 1em
         .item
             display inline-block
-            background-color #ededed
+            background-color #d8d8d8
             margin  1%
             padding  2%
-            width 100% 
+            width 100%
             border 2px solid main-blue
             border-radius 5px
             box-shadow 0px 2px 3px 2px  border-grey
