--- a/frontend/components/menu/menuStyles.styl
+++ b/frontend/components/menu/menuStyles.styl
@@ -13,7 +13,7 @@
         background-color #fbfbfb;
         color black
         width 100%
-        height 30px
+        height 6%
         display none
     .fa
         position: relative;
@@ -94,23 +94,23 @@
         display flex
         .burger
             display flex
-            justify-content center
+            justify-content flex-start
             align-items center
             width 100%
+            z-index 10
         .fa
             padding-right 15px
             padding-left 5px
         .side-menu
-            padding-top 0px
+            //- padding-top 0px
             width 100%
             height auto
-            margin-top 60px
+            margin-top 35px
             display none 
+            z-index: 5;
             li 
                 width auto
                 margin-left 5px
-
-
             .nav-text
 
                 width  100%
@@ -125,7 +125,7 @@
                 a
                     font-size 2.5em
         .burger
-            height 12%
+            height 5%
             .fa
                 font-size: 2.1em;
 @media only screen  and (max-width : 480px), screen and (max-device-width: 480px)
@@ -133,11 +133,11 @@
         .side-menu
             .fa
                 display none
-            margin-top 90px
+            margin-top 60px
             li
                 a
                     font-size 3.5em
         .burger
-            height 10%
+            height 4%
             .fa
-                font-size: 3.5em;
+                font-size: 3em;
