--- a/frontend/components/createProject/createProject.component.styl
+++ b/frontend/components/createProject/createProject.component.styl
@@ -30,6 +30,7 @@
 					padding 8px
 					border 1px solid gray
 					color #333
+					font-family "Open Sans"
 					&:hover
 						box-shadow: 0 0 7px #3498db
 			.projDescription
@@ -43,6 +44,7 @@
 					padding 8px
 					border 1px solid gray
 					color #333
+					font-family "Open Sans"
 					&:hover
 						box-shadow: 0 0 7px #3498db
 			.projDeadline
@@ -66,6 +68,8 @@
 						padding 8px
 						cursor pointer
 						user-select none
+						font-family "Open Sans"
+						min-width 25%
 					i
 						font-size 28px
 			.button
@@ -76,7 +80,7 @@
 				.save
 					button()
 					margin-top 30px
-					padding 0 25%
+					padding 0 45px
 			.projParticipants
 				width 100%
 				display block-flex
@@ -92,6 +96,7 @@
 					padding 8px
 					border 1px solid gray
 					color #333
+					font-family "Open Sans"
 					&:hover
 						box-shadow: 0 0 7px #3498db
 				.participantCell
@@ -104,6 +109,7 @@
 						display inline-flex
 						padding 10px
 						border-radius 8px
+						font-family "Open Sans"
 						.participantTitle
 							color white
 							margin-right 10px
