menu height fix and font size fix

--- a/frontend/components/menu/menuStyles.styl
+++ b/frontend/components/menu/menuStyles.styl
@@ -90,6 +90,7 @@
 
 @media only screen  and (max-width : 1000px), screen and (max-device-width : 1000px)
     .side-menu-wrapper
+        height auto
         width 100%
         display flex
         .burger
@@ -136,8 +137,9 @@
             margin-top 60px
             li
                 a
-                    font-size 3.5em
+                    font-size 2em
         .burger
             height 4%
             .fa
-                font-size: 3em;
+                font-size: 2.5em;
+                padding: 0.2em;
