projectCreateStylesUpdate Signed-off-by: AnthStep <lightlife25@gmail.com>

--- a/frontend/components/createProject/createProject.component.styl
+++ b/frontend/components/createProject/createProject.component.styl
@@ -87,6 +87,7 @@
 				flex-wrap wrap
 				justify-content center
 				align-items center
+				transition all 0.5s ease-out
 				select
 					max-width 80%
 					min-width 80%
